<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp"/>

    <View
        android:id="@+id/login_back_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/side_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </View>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_logo"
        app:civ_border_color="#03A9F4"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary"
        android:layout_marginTop="30dp"
        android:background="@drawable/back_solid_white_transparent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/Name"
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/status_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary"
        android:layout_marginTop="30dp"

        android:background="@drawable/back_solid_white_transparent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/name_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"

            android:drawableStart="@drawable/ic_error_outline_black_24dp"
            android:drawableLeft="@drawable/ic_error_outline_black_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/Status"
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary"
        android:layout_marginTop="30dp"

        android:background="@drawable/back_solid_white_transparent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/status_editText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"

            android:drawableStart="@drawable/phone_foreground"
            android:drawableLeft="@drawable/phone_foreground"
            android:drawableTint="#03A9F4"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gotham_rounded_light"
            android:hint="@string/phone"
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:textColor="@color/icons"
        android:background="@drawable/back_solid_primary"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save"
        android:onClick="update_data"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/phone_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>